--- a/task2.css
+++ b/task2.css
@@ -64,7 +64,7 @@ body{
     font-size:70px;
     letter-spacing: 10px;
     line-height: 15px;
-    color:white;
+    color:#00D646;
     font-family: 'Roboto', sans-serif;
 }
 #name3{
